# knowledgeGraph

./: .gitignore  404.html  CLAUDE.md  README.md  index.html
Ontology-Tools/: README.md  test-single-import.js  validate-ontology.sh
Ontology-Tools/tools/audit/: Cargo.toml
Ontology-Tools/tools/audit/src/: main.rs
api/: search-index.json
assets/: HomePage--vR20-qG.js  HomePage-20PBCtUG.js  HomePage-6t0zzDgO.js  HomePage-9HVB3R5g.js  HomePage-B0zm4Jpg.js  HomePage-B7lDUpav.js  HomePage-B9Op0Pip.js  HomePage-B9RTAauu.js  HomePage-BB8EzeH9.js  HomePage-BJXiwDs1.js  HomePage-BJzpD9DN.js  HomePage-BQRK0o4b.js  HomePage-BSWgjtz6.js  HomePage-BXJq0Gh6.js  HomePage-BXlua6Bu.js  HomePage-BY6JzpcQ.js  HomePage-BZ9Yp6Rm.js  HomePage-BeLTXzY8.js  HomePage-Big6E0NR.js  HomePage-Bklw8IfT.js  HomePage-BmkJN7BC.css  HomePage-BqJq0QTt.js  HomePage-BsST1_CE.js  HomePage-Bz8KqUBs.js  HomePage-C0nkyjr4.js  HomePage-C6CltIaw.js  HomePage-CAKmiyuN.js  HomePage-CDxLGPt1.js  HomePage-CEceaTcs.js  HomePage-CF2MoXsE.js  HomePage-CIWUGUTS.js  HomePage-CMcY0Fkp.js  HomePage-CODu0RQW.js  HomePage-CZwpS_Mp.js  HomePage-C_uSPoBW.js  HomePage-CbCPwPxF.js  HomePage-CcIISMGK.js  HomePage-ChmqTfH1.js  HomePage-Ck6_4cml.js  HomePage-Cl5Oidr5.js  (+449 more)
data/: ontology.json  ontology.ttl
docs/: 51-percent-attack-corrected.md  51-percent-attack-migration-log.md  51-percent-attack-processing-report.md  BATCH2-VERIFICATION.md  BITCOIN-AI-CONSOLIDATION-REPORT.md  BITCOIN-AI-CONTENT-INVENTORY.md  BLOCKCHAIN-FINANCE-EXECUTIVE-SUMMARY.md  BLOCKCHAIN-FINANCE-FINAL-REPORT.md  BLOCKCHAIN-MIGRATION-COMPLETE.md  CONVERTER_AUDIT_AND_PLAN.md  DEPLOYMENT-COMPLETE-STATUS.md  DEPLOYMENT-STATUS.md  DEPLOYMENT-VERIFICATION-REPORT.md  KNOWLEDGE_BASE.md  MIGRATION_FILE_INVENTORY.md  MIGRATION_SUMMARY.md  (+180 more)
publishing-tools/WasmVOWL/rust-wasm/: .gitignore  Cargo.toml  README.md  TEST-RESULTS.md  webvowl_wasm.d.ts
publishing-tools/WasmVOWL/rust-wasm/benches/: interaction_bench.rs  layout_bench.rs  parser_bench.rs  phase3_benchmarks.rs
publishing-tools/WasmVOWL/rust-wasm/docs/: PHASE3-TASK3.1-COMPLETION-REPORT.md
publishing-tools/WasmVOWL/rust-wasm/examples/: barnes_hut_benchmark.rs  basic.html
publishing-tools/WasmVOWL/rust-wasm/src/: debug.rs  error.rs  lib.rs
publishing-tools/WasmVOWL/rust-wasm/src/bindings/: mod.rs
publishing-tools/WasmVOWL/rust-wasm/src/graph/: builder.rs  edge.rs  mod.rs  node.rs
publishing-tools/WasmVOWL/rust-wasm/src/interaction/: mod.rs
publishing-tools/WasmVOWL/rust-wasm/src/layout/: force.rs  mod.rs  quadtree.rs  simulation.rs
publishing-tools/WasmVOWL/rust-wasm/src/ontology/: mod.rs  model.rs  parser.rs
publishing-tools/WasmVOWL/rust-wasm/src/render/: mod.rs
publishing-tools/WasmVOWL/rust-wasm/tests/: integration_test.rs  ontology_metadata_test.rs  phase3_integration.rs
publishing-tools/rust-web-publish/logseq-publisher-rust/: .gitignore  .npmignore  Cargo.toml  PARSER_INTEGRATION_REPORT.md  README-NPM.md  action-entrypoint.sh  action.yml  build.rs  build.sh  index.d.ts  package.json
publishing-tools/rust-web-publish/logseq-publisher-rust/benches/: bench_main.rs
publishing-tools/rust-web-publish/logseq-publisher-rust/docs/: API.md  ARCHITECTURE.md  CONTRIBUTING.md  DEPLOYMENT.md  EXAMPLES.md  GITHUB_ACTIONS.md  MIGRATION.md  NAPI_IMPLEMENTATION_SUMMARY.md  README.md
publishing-tools/rust-web-publish/logseq-publisher-rust/frontend/: index.html
publishing-tools/rust-web-publish/logseq-publisher-rust/frontend/styles/: main.css
publishing-tools/rust-web-publish/logseq-publisher-rust/frontend/tests/: test.html
publishing-tools/rust-web-publish/logseq-publisher-rust/src/: api_generator.rs  exporter.rs  graph.rs  lib.rs  napi_bindings.rs  owl_extractor.rs  parser.rs
publishing-tools/rust-web-publish/logseq-publisher-rust/tests/: comprehensive_graph_tests.rs  error_handling_tests.rs  integration_test.rs  performance_regression_tests.rs  test-cli.sh  test_exporter.rs  test_graph.rs  test_integration.rs  test_owl_extractor.rs  test_parser.rs  test_parser_integration.rs  test_real_parse.rs  validate_real_files.rs
(+6926 files in other folders)
