[package]
name = "ontology-audit"
version = "0.1.0"
edition = "2021"

[dependencies]
horned-owl = "0.13"
rio_turtle = "0.8"
rio_api = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
walkdir = "2.4"
regex = "1.10"
