[package]
name = "webvowl-wasm"
version = "0.2.0"
authors = ["WebVOWL Contributors"]
edition = "2021"
license = "MIT"
description = "High-performance WASM implementation of WebVOWL ontology visualizer"
repository = "https://github.com/VisualDataWeb/WebVOWL"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "console",
    "Document",
    "Element",
    "HtmlElement",
    "Window",
    "CanvasRenderingContext2d",
    "HtmlCanvasElement",
] }
wee_alloc = { version = "0.4", optional = true }
thiserror = "1.0"
petgraph = "0.6"
nalgebra = "0.32"

[dev-dependencies]
wasm-bindgen-test = "0.3"
mockall = "0.12"
pretty_assertions = "1.4"
criterion = "0.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 0

[[bench]]
name = "layout_bench"
harness = false

[[bench]]
name = "parser_bench"
harness = false

[[bench]]
name = "interaction_bench"
harness = false

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
